# joke-app-backend

./: .env.example  .flake8  Makefile  conftest.py  main.py  pyproject.toml  requirements.txt
adapters/src/: __init__.py
adapters/src/repositories/: __init__.py
adapters/src/repositories/joke_api/: __init__.py  joke_api_repository.py
adapters/src/repositories/memory/: __init__.py  memory_joke_repository.py
adapters/tests/repositories/: __init__.py
adapters/tests/repositories/joke_api/: __init__.py  mock_joke_api.py
api/routers/: joke.py  test_joke.py
core/src/exceptions/: __init__.py
core/src/exceptions/business/: __init__.py  joke.py
core/src/exceptions/repository/: __init__.py  joke.py
core/src/models/: __init__.py  joke.py
core/src/repository/: __init__.py  joke_repository.py
core/src/usecases/: __init__.py
core/src/usecases/get/: __init__.py  get_joke.py
core/tests/factory/: joke_factory.py
core/tests/mock_services/joke_api/: Dockerfile  jokes.json  main.py
core/tests/usecases/: test_get_joke.py
factories/config/: __init__.py  utils.py
factories/config/joke_api/: __init__.py  joke_api_config.py
factories/config/mock_joke_api/: __init__.py  mock_joke_api_config.py
