[tool.poetry]
name = "joke-app-backend"
version = "0.1.0"
description = ""
authors = ["Constancio Molinengo <constancio.molinengo@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.4"
annotated-types = "0.6.0"
anyio = "4.2.0"
exceptiongroup = "1.2.0"
fastapi = "0.108.0"
flake8 = "6.1.0"
idna = "3.6"
iniconfig = "2.0.0"
mccabe = "0.7.0"
mypy = "1.8.0"
mypy-extensions = "1.0.0"
packaging = "23.2"
pluggy = "1.3.0"
pycodestyle = "2.11.1"
pydantic = "2.5.3"
pydantic-core = "2.14.6"
pyflakes = "3.1.0"
pytest = "7.4.4"
sniffio = "1.3.0"
starlette = "0.32.0.post1"
tomli = "2.0.1"
typing-extensions = "4.9.0"
uvicorn = "^0.25.0"
python-dotenv = "^1.0.0"
pytest-mock = "^3.12.0"
ipython = "^8.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
